--- a/curso/tarefas/src/app/tarefas/listar/listar-tarefa.component.html
+++ b/curso/tarefas/src/app/tarefas/listar/listar-tarefa.component.html
@@ -14,7 +14,8 @@
   <tr *ngFor="let tarefa of tarefas">
     <!-- [ tarefaConcluida ] ="tarefa.concluida" -->
     <td
-      [class.success]="!tarefa.concluida">
+      [tarefaConcluida]="tarefa.concluida"
+      [class.bg-success]="!tarefa.concluida">
       {{ tarefa.nome }}
     </td>
     <td class="text-center">
